Fix comment pop up width break on desktop

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -202,6 +202,7 @@ footer {
   align-items: center;
   border: none;
   height: 100%;
+  width: 100%;
 }
 
 .modal-content {
